Added first few meta-slides

--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,8 @@
 
 {% block slides %}
 {% include "source/title.html" %}
-{% include "source/test_markdown.html" %}
-{% include "source/test_code.html" %}
-{% include "source/test_backgrounds.html" %}
+{% include "source/whoami.html" %}
+{% include "source/thanks_to_paypal.html" %}
+{% include "source/slack.html" %}
+{% with active="intro" %}{% include "source/introduction.html" %}{% endwith %}
 {% endblock %}
