--- a/source/thanks_to_paypal.html
+++ b/source/thanks_to_paypal.html
@@ -2,7 +2,7 @@
   <script type="text/template">
     ## Thank you, PayPal Singapore &#9825; &#9825; &#9825;
 
-    > Big thanks to Laurence Putra of PayPal Singapore for kindly offering to
-    > host this event and for sponsoring pizza and softdrinks.
+    > Big thanks to Laurence Putra of PayPal Singapore for kindly
+    > hosting this event repeatedly and for sponsoring pizza and softdrinks.
   </script>
 </section>
