--- a/source/title.html
+++ b/source/title.html
@@ -1,7 +1,7 @@
 <section data-markdown>
     <script type="text/template">
       # Mkdocs & Git Introduction
-      #### Learn to publish your documentation on GitHub
+      #### Let's dig into Git, GitHub, Markdown and publish a website!
 
       <small>Press SPACE or SHIFT+SPACE to move through the slides...</small>
     </script>
