--- a/source/toc.html
+++ b/source/toc.html
@@ -4,9 +4,10 @@
   <ul>
     {% with color="#17BAF9" %}
     <li><span {% if active == 'intro' %}class="toc-active" style="color: {{ color }};"{% endif %}>Introduction</span></li>
-    <li><span {% if active == 'mkdocs' %}class="toc-active" style="color: {{ color }};"{% endif %}>Install & Use Mkdocs</span></li>
+    <li><span {% if active == 'demo' %}class="toc-active" style="color: {{ color }};"{% endif %}>Demo</span></li>
     <li><span {% if active == 'git' %}class="toc-active" style="color: {{ color }};"{% endif %}>Git Basics</span></li>
     <li><span {% if active == 'github' %}class="toc-active" style="color: {{ color }};"{% endif %}>Your GitHub Profile</span></li>
+    <li><span {% if active == 'mkdocs' %}class="toc-active" style="color: {{ color }};"{% endif %}>Install & Use MkDocs</span></li>
     <li><span {% if active == 'github-pages' %}class="toc-active" style="color: {{ color }};"{% endif %}>GitHub Pages</span></li>
     {% endwith %}
   </ul>
