--- a/source/demo.html
+++ b/source/demo.html
@@ -3,7 +3,9 @@
   <section data-markdown>
     <script type="text/template">
       ##From zero to a website in 4 minutes (1/2)
-      First we create a folder and start a new MkDocs project
+
+      * Sit back and watch, no need to repeat this on your machine now
+      * First we create a folder and start a new MkDocs project
 <pre><code>mkdir -p ~/Projects/pyladies/pyladies-sg
 cd ~/Projects/pyladies/pyladies-sg
 mkvirtualenv pyladies-sg
@@ -35,6 +37,14 @@ git push -u origin master
 mkdocs gh-deploy
 # Go to http://mbrochh.github.io/pyladies-sg
 </code></pre>
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##It should look like this
+
+      <img src="./img/website.png" />
     </script>
   </section>
 </section>
