--- a/source/index.html
+++ b/source/index.html
@@ -11,4 +11,6 @@
 {% with active="git" %}{% include "source/git.html" %}{% endwith %}
 {% with active="github" %}{% include "source/github.html" %}{% endwith %}
 {% with active="mkdocs" %}{% include "source/mkdocs.html" %}{% endwith %}
+{% with active="github-pages" %}{% include "source/github_pages.html" %}{% endwith %}
+{% with active="recap" %}{% include "source/recap.html" %}{% endwith %}
 {% endblock %}
