--- a/source/introduction.html
+++ b/source/introduction.html
@@ -4,7 +4,7 @@
     <script type="text/template">
       ##What are we going to do today?
 
-      * Create a website with [mkdocs](http://www.mkdocs.org)
+      * Create a website with [MkDocs](http://www.mkdocs.org)
       * Add some content using [Markdown](http://daringfireball.net/projects/markdown/)
       * Create a profile on [GitHub](https://github.com)
       * Create our first [Git](http://www.git-scm.com) repository
@@ -32,7 +32,7 @@
       * Markdown is a formatting syntax
       * It is also a text-to-HTML conversion tool
       * It is easy to read for humans *and* for machines
-      * You write simple text files and end up with complex HTML files
+      * You write simple text files and convert them into complex HTML files
       * Official website: [http://daringfireball.net/projects/markdown/](http://daringfireball.net/projects/markdown/)
     </script>
   </section>
@@ -103,10 +103,8 @@ Some text...
     <script type="text/template">
       ##And finally: GitHub Pages?
 
-      * GitHub allows you to upload a bunch of HTML files
+      * GitHub allows you to upload a bunch of **static** HTML files
       * They will be served by their powerful infrastructure for free
-      * You don't have any programming language or database available
-      * So you can only host static pages
       * Many repositories use this to host their documentation
       * Official documentation: [https://pages.github.com](https://pages.github.com)
     </script>
