--- a/presentation/index.html
+++ b/presentation/index.html
@@ -121,7 +121,7 @@
     <script type="text/template">
       ##What are we going to do today?
 
-      * Create a website with [mkdocs](http://www.mkdocs.org)
+      * Create a website with [MkDocs](http://www.mkdocs.org)
       * Add some content using [Markdown](http://daringfireball.net/projects/markdown/)
       * Create a profile on [GitHub](https://github.com)
       * Create our first [Git](http://www.git-scm.com) repository
@@ -149,7 +149,7 @@
       * Markdown is a formatting syntax
       * It is also a text-to-HTML conversion tool
       * It is easy to read for humans *and* for machines
-      * You write simple text files and end up with complex HTML files
+      * You write simple text files and convert them into complex HTML files
       * Official website: [http://daringfireball.net/projects/markdown/](http://daringfireball.net/projects/markdown/)
     </script>
   </section>
@@ -220,10 +220,8 @@ Some text...
     <script type="text/template">
       ##And finally: GitHub Pages?
 
-      * GitHub allows you to upload a bunch of HTML files
+      * GitHub allows you to upload a bunch of **static** HTML files
       * They will be served by their powerful infrastructure for free
-      * You don't have any programming language or database available
-      * So you can only host static pages
       * Many repositories use this to host their documentation
       * Official documentation: [https://pages.github.com](https://pages.github.com)
     </script>
@@ -248,7 +246,9 @@ Some text...
   <section data-markdown>
     <script type="text/template">
       ##From zero to a website in 4 minutes (1/2)
-      First we create a folder and start a new MkDocs project
+
+      * Sit back and watch, no need to repeat this on your machine now
+      * First we create a folder and start a new MkDocs project
 <pre><code>mkdir -p ~/Projects/pyladies/pyladies-sg
 cd ~/Projects/pyladies/pyladies-sg
 mkvirtualenv pyladies-sg
@@ -280,6 +280,14 @@ git push -u origin master
 mkdocs gh-deploy
 # Go to http://mbrochh.github.io/pyladies-sg
 </code></pre>
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##It should look like this
+
+      <img src="./img/website.png" />
     </script>
   </section>
 </section>
@@ -527,6 +535,74 @@ cat ~/.ssh/id_rsa.pub
     </script>
   </section>
 
+  <section data-markdown>
+    <script type="text/template">
+      ## Let's create a public repository (1/2)
+
+      * You should still have the `git-test` repository we created earlier
+      * Go to [https://github.com/new](https://github.com/new)
+      * Name your new repository `git-test` & click at "Create repository"
+      * You now have an empty public repository
+      * GitHub shows you some hints on what to do next
+      * Make sure to switch the button at the top from "HTTPS" to "SSH"
+      * That way you don't have to enter your username and password when you
+        push code because you are using your SSH-key to identify yourself
+      * (continue reading on next slide)
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ## Let's create a public repository (2/2)
+
+      * Look at the lower part of the instructions
+      * This part is for existing repositories (you already have it on your PC)
+      * Copy and paste the two commands into your command line
+
+<pre><code># They look like this:
+git remote add origin git@github.com:YOURUSERNAME/git-test.git
+git push -u origin master
+</code></pre>
+
+      * Refresh your browser
+      * The GitHub instructions will disappear
+      * You will now see the code that you have just pushed
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ## Clone your repository (1/2)
+
+      * Let's say your laptop explodes and you lose all your files (touch wood!)
+      * to simulate this situation, delete the `git-test` folder on your computer
+
+<pre><code>rm -rf ~/Projects/git-test</code></pre>
+
+      * Now you have a new computer and you clone your repository from GitHub
+      * Open your repository on GitHub in your browser
+      * There is a little link at the bottom right:
+
+      <img src="./img/clone.png" />
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ## Clone your repository (2/)
+
+      * copy the SSH link from the GitHub page
+      * and clone the repository into your computer:
+
+<pre><code>cd ~/Projects
+git clone git@github.com:YOURUSERNAME/git-test.git
+cd git-test
+ls
+</code></pre>
+
+      * You should see your files again :)
+    </script>
+  </section>
 </section>
 <section>
   <section>
@@ -571,7 +647,184 @@ ls
       * and a first content file (`docs/index.md`) for you
     </script>
   </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##Change some settings
+
+<pre><code>atom mkdocs.yml
+</code></pre>
+
+      Make it look like this:
+
+<pre><code>site_name: My MkDocs Test
+pages:
+- Home: 'index.md'
+- About: 'about.md'
+</code></pre>
+
+      * also create a new file `about.md` in the `docs` folder
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##Write some content
+
+      * Open `index.md` in atom and make it look like this:
+
+<pre><code>(HINT: you can scroll down in this code box)
+# First headline
+
+## A sub-headline
+
+### You get the idea!
+
+Here is some text with a [link to Google](http://google.com)
+
+Find out more at the [About page](about.md)
+
+* here is
+* an unordered
+* list of things
+
+Make sure to add text between two lists.
+
+1. and here is
+1. an ordered
+1. list of things
+
+Here is a word in **fat** and another one in *italics*.
+
+Here is a word that is `code`.
+
+And here is a so called fenced code-block:
+
+```python
+import datetime
+
+print datetime.datetime.now
+```
+</code></pre>
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##Write some more content
+
+      * Open `about.md` in atom and make it look like this:
+
+<pre><code># About Us
+
+If you want to find out more about us, you have to come to our meetups :P
+</code></pre>
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##Start a mini-webserver
+
+      * It's time to have a look at our website
+      * MkDocs comes with a mini-webserver
+
+<pre><code>mkdocs serve</code></pre>
+
+      * Open `http://localhost:8000` in your browser
+      * Try to make changes to your content and save them
+      * The website should update automatically when you save the file
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##Official Documentation
+
+      * As you can see it's all pretty simple
+      * First you add some pages to `mkdocs.yml`
+      * Then you create the files and write Markdown content
+      * Finally you look at it with `mkdocs serve`
+      * Learn more about [writing your docs](http://www.mkdocs.org/user-guide/writing-your-docs/)
+      * Learn more about the [available configuration](http://www.mkdocs.org/user-guide/configuration/)
+    </script>
+  </section>
 </section>
+<section>
+  <section>
+  <h2>This is the plan</h2>
+
+  <ul>
+    
+    <li><span >Introduction</span></li>
+    <li><span >Demo</span></li>
+    <li><span >Git Basics</span></li>
+    <li><span >Your GitHub Profile</span></li>
+    <li><span >Install & Use MkDocs</span></li>
+    <li><span class="toc-active" style="color: #17BAF9;">GitHub Pages</span></li>
+    
+  </ul>
+</section>
+  <section data-markdown>
+    <script type="text/template">
+      ##GitHub Pages
+
+      * We know: GitHub hosts the world's open source code
+      * We also know: Every good software should have a good documentation
+      * That means, all of GitHub's users have the same problem:
+        * "where to host my documentation??"
+        * If you wrote a really popular software, hosting documentation<br />
+          can even be quite expensive
+      * GitHub solves that problem with [GitHub Pages](https://pages.github.com)
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##How does it work?
+
+      * MkDocs makes it so easy, you don't even need to know how it works
+      * But in case you are curious, it works like this:
+        * if you create a branch called `gh-pages` in your repository
+        * and if you put some static HTML files into that branch
+        * then GitHub will see that and create an URL like this:
+        * http://username.github.io/repo-name
+    </script>
+  </section>
+
+  <section data-markdown>
+    <script type="text/template">
+      ##How does MkDocs do it?
+
+      * When you are done editing your content, simply run:
+
+<pre><code>mkdocs gh-deploy</code></pre>
+
+      * MkDocs will create a `gh-pages` branch
+      * It will run `mkdocs build` and generate the `site` folder
+      * It will copy the `site` folder into the `gh-pages` branch
+      * It will run `git push origin:gh-pages`
+        * That means: It pushes your local `gh-pages` branch into your<br />
+          public repository on GitHub
+      * GitHub will automatically notice that the `gh-pages` branch has changed
+      * A few seconds later, your new content will be visible online
+    </script>
+  </section>
+</section>
+<section>
+  <section data-markdown>
+    <script type="text/template">
+      ##Recap
+
+      * High-five! You know pretty much everything about Markdown now
+      * Use the [Markdown documentation](http://daringfireball.net/projects/markdown/) if you need to refresh your memory
+      * You have installed Git - after your editor, probably the most essential tool<br />
+        for any software developer on the planet
+      * Unfortunately, Git is really complex. We will learn more about that, soon!
+      * You have a SSH-key and a GitHub profile now,<br />
+        you can now publish open source code and change the world!<br />
+    </script>
+  </section>
 
             </div>
 
